feat: add fill API (#10)
* feat: add fill API

* refactor: return structured get block result
